// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`POST /v1/campaigns When all campaign names in request body are not unique 409 - Conflict 1`] = `
Object {
  "data": Object {},
  "meta": Object {
    "code": 40901,
    "errors": Array [],
    "message": "Candidate names are conflict.",
  },
}
`;

exports[`POST /v1/campaigns When all campaign names in request body are unique 201 - Successfully created 1`] = `
Object {
  "data": Object {
    "candidates": Array [
      Object {
        "name": "Michael Jordan",
        "number_of_votes": 0,
        "voted": false,
      },
      Object {
        "name": "Tim Duncan",
        "number_of_votes": 0,
        "voted": false,
      },
    ],
    "end_date": "2019-01-31",
    "id": "uuid-1",
    "start_date": "2019-01-01",
    "title": "Who is the best NBA player in the history",
  },
  "meta": Object {
    "code": 20100,
    "message": "Created",
  },
}
`;

exports[`POST /v1/campaigns When all campaign names in request body are unique 201 - Successfully created: hkid_candidate_set_ttls 1`] = `
Array [
  2735999,
  2735999,
]
`;

exports[`POST /v1/campaigns When all campaign names in request body are unique 201 - Successfully created: hkid_candidate_sets 1`] = `
Array [
  Array [
    "0",
  ],
  Array [
    "0",
  ],
]
`;

exports[`POST /v1/campaigns When all campaign names in request body are unique 201 - Successfully created: hkid_set 1`] = `
Array [
  "0",
]
`;

exports[`POST /v1/campaigns When all campaign names in request body are unique 201 - Successfully created: hkid_set_ttl 1`] = `2735999`;

exports[`POST /v1/campaigns When all campaign names in request body are unique 201 - Successfully created: inserted_campaign 1`] = `
Object {
  "end_date": "2019-01-31",
  "id": "uuid-1",
  "number_of_votes:Michael Jordan": "0",
  "number_of_votes:Tim Duncan": "0",
  "start_date": "2019-01-01",
  "title": "Who is the best NBA player in the history",
}
`;
